--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       action="https://mate-academy-form-lesson.herokuapp.com/create-application"
       class="form"
       method="post"
+      onsubmit="onSubmit()"
     >
       <fieldset class="fields personal__information">
 
@@ -29,6 +30,7 @@
           id="surname"
           class="input__field surname"
           required
+          autocomplete="off"
           >
         </label>
 
@@ -39,6 +41,7 @@
             name="name"
             id="name"
             class="input__field name"
+            autocomplete="off"
           >
         </label>
 
@@ -51,7 +54,7 @@
             class="input__field age"
             value="12"
             min="1"
-            max="200"
+            max="100"
           >
         </label>
 
@@ -98,6 +101,8 @@
             name="password"
             id="password"
             class="input__field password"
+            minlength="8"
+            maxlength="32"
           >
         </label>
       </fieldset>
@@ -188,6 +193,7 @@
           name="comments"
           id="comments"
           class="textarea comments"
+          autocomplete="off"
           >
           </textarea>
         </label>
